--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
         .links a:hover {
             text-decoration: underline;
         }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
 <div class="container">
+    <img src="profile_picture.jpg" alt="Joe Barker" class="profile-pic">
     <h1>Joe Barker</h1>
     <p>Android & Flutter Developer | Digital Nomad</p>
     <div class="links">
