--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <h1>Joe Barker</h1>
     <p>Android & Flutter Developer | Digital Nomad</p>
     <div class="links">
-        <a href="https://github.com/joebarker" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/joebarker" target="_blank">LinkedIn</a>
+        <a href="https://github.com/joegec" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/joe-barker-mobile-developer" target="_blank">LinkedIn</a>
     </div>
 </div>
 </body>
