--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
 </head>
 <body>
     <div class="container">
-        <img src="profile.jpg" alt="Joe Barker" class="profile-pic">
+        <img src="profile-picture.jpg" alt="Joe Barker" class="profile-pic">
         <h1>Joe Barker</h1>
         <p>Android & Flutter Developer | Digital Nomad</p>
         <div class="links">
-            <a href="https://github.com/joebarker" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/joebarker" target="_blank">LinkedIn</a>
+            <a href="https://github.com/joegec" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/joe-barker-mobile-developer" target="_blank">LinkedIn</a>
         </div>
         
         <div class="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio-item">
-                <img src="moviedb-android.png" alt="Project 1">
+                <img src="moviedb-android.png" alt="Movie DB Android">
                 <h3>Native Android Movie Database</h3>
                 <p>Written in Jetpack Compose, using Retrofit, Room, Hilt, Stateflow, Coroutines, and MVVM.</p>
                 <p>Clean architecture, modularised by layer.</p>
                 <a href="https://github.com/joegec/MovieDB-Android" target="_blank">View on GitHub</a>
             </div>
             <div class="portfolio-item">
-                <img src="pokemondb-flutter.jpg" alt="Project 2">
+                <img src="pokemondb-flutter.jpg" alt="Pokedex Flutter">
                 <h3>Flutter Pokedex App</h3>
                 <p>Using Dio, SQLite, Bloc.</p>
                 <p>Clean architecture modularised by feature.</p>
