--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <div class="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio-item">
-                <img src="moviedb-android.png" alt="Movie DB Android">
+                <img src="moviedb-android.png" alt="Movie DB Android" style="width: 30vw; min-width: 330px;">
                 <h3>Native Android Movie Database</h3>
                 <p>Written in Jetpack Compose, using Retrofit, Room, Hilt, Stateflow, Coroutines, and MVVM.</p>
                 <p>Clean architecture, modularised by layer.</p>
                 <a href="https://github.com/joegec/MovieDB-Android" target="_blank">View on GitHub</a>
             </div>
             <div class="portfolio-item">
-                <img src="pokemondb-flutter.jpg" alt="Pokedex Flutter">
+                <img src="pokemondb-flutter.png" alt="Pokedex Flutter" style="width: 30vw; min-width: 330px;">
                 <h3>Flutter Pokedex App</h3>
                 <p>Using Dio, SQLite, Bloc.</p>
                 <p>Clean architecture modularised by feature.</p>
