--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="profile-picture.jpg" alt="Joe Barker" class="profile-pic">
+        <img src="profile_picture.jpg" alt="Joe Barker" class="profile-pic">
         <h1>Joe Barker</h1>
         <p>Android & Flutter Developer | Digital Nomad</p>
         <div class="links">
