--- a/index.html
+++ b/index.html
@@ -131,17 +131,19 @@
                 <div class="portfolio-item-content">
                     <h3>Native Android Movie Database</h3>
                     <p>Written in Jetpack Compose, using Retrofit, Room, Hilt, Stateflow, Coroutines, and MVVM.</p>
+                    <p>Extensive unit tests in JUnit and Mockito.</p>
                     <p>Clean architecture, modularised by layer.</p>
-                    <a href="https://github.com/joegec/MovieDB-Android" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joegec/MovieDB-Android" target="_blank">View on GitHub (ReadMe!)</a>
                 </div>
             </div>
             <div class="portfolio-item">
                 <img src="pokemondb-flutter.png" alt="Pokedex Flutter">
                 <div class="portfolio-item-content">
                     <h3>Flutter Pokedex App</h3>
-                    <p>Using Dio, SQLite, Bloc.</p>
+                    <p>Using Dio, SQLite, L10n, GetIt and MVVM.</p>
+                    <p>Extensive unit tests in JUnit and Mockito.</p>
                     <p>Clean architecture modularised by feature.</p>
-                    <a href="https://github.com/joegec/PokemonDbFlutter" target="_blank">View on GitHub</a>
+                    <a href="https://github.com/joegec/PokemonDbFlutter" target="_blank">View on GitHub (ReadMe!)</a>
                 </div>
             </div>
         </div>
