--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #f4f4f4;
         }
         .container {
-            max-width: 600px;
+            max-width: 800px;
             margin: 50px auto;
             background: white;
             padding: 20px;
@@ -22,13 +22,21 @@
         }
         h1 {
             color: #333;
+            font-size: 36px;
+            font-weight: bold;
+            margin-bottom: 10px;
         }
         p {
             color: #666;
+            font-size: 18px;
+        }
+        .links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
         }
         .links a {
-            display: block;
-            margin: 10px 0;
             text-decoration: none;
             color: #007BFF;
             font-size: 18px;
@@ -36,29 +44,47 @@
         .links a:hover {
             text-decoration: underline;
         }
+        .links span {
+            color: #333;
+            font-size: 18px;
+        }
         .profile-pic {
             width: 150px;
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 15px;
+            margin-top: 40px;
+            margin-bottom: 5px;
         }
         .portfolio {
             margin-top: 30px;
         }
+        .portfolio-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
         .portfolio-item {
+            display: flex;
+            align-items: center;
             background: #fff;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
         }
         .portfolio-item img {
-            width: 100%;
+            width: 150px;
+            max-height: 200px;
             border-radius: 10px;
+            object-fit: contain;
+            margin-right: 15px;
+        }
+        .portfolio-item-content {
+            text-align: left;
+            flex: 1;
         }
         .portfolio-item h3 {
-            margin: 10px 0;
+            margin: 0 0 10px 0;
         }
         .portfolio-item a {
             text-decoration: none;
@@ -67,35 +93,74 @@
         .portfolio-item a:hover {
             text-decoration: underline;
         }
+        .cv-button {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 15px;
+            font-size: 18px;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .cv-button:hover {
+            background-color: #0056b3;
+        }
+        @media (max-width: 600px) {
+            .portfolio-item {
+                flex-direction: column;
+                text-align: center;
+            }
+            .portfolio-item img {
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+            .portfolio-item-content {
+                text-align: center;
+            }
+            .links {
+                flex-direction: column;
+                gap: 5px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <img src="profile_picture.jpg" alt="Joe Barker" class="profile-pic">
-        <h1>Joe Barker</h1>
-        <p>Android & Flutter Developer | Digital Nomad</p>
-        <div class="links">
-            <a href="https://github.com/joegec" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/joe-barker-mobile-developer" target="_blank">LinkedIn</a>
-        </div>
-        
-        <div class="portfolio">
-            <h2>Portfolio</h2>
+<div class="container">
+    <img src="profile_picture.jpg" alt="Joe Barker" class="profile-pic">
+    <h1>Joe Barker</h1>
+    <p>Native Android & Flutter Developer</p>
+    <a href="Joe_Barker_CV.pdf" class="cv-button" target="_blank">Download CV</a>
+    <div class="links">
+        <a href="https://github.com/joegec" target="_blank">GitHub</a>
+        <span>|</span>
+        <a href="https://linkedin.com/in/joe-barker-mobile-developer" target="_blank">LinkedIn</a>
+    </div>
+
+    <div class="portfolio">
+        <h2>Portfolio</h2>
+        <div class="portfolio-container">
             <div class="portfolio-item">
-                <img src="moviedb-android.png" alt="Movie DB Android" style="width: 30vw; min-width: 330px;">
-                <h3>Native Android Movie Database</h3>
-                <p>Written in Jetpack Compose, using Retrofit, Room, Hilt, Stateflow, Coroutines, and MVVM.</p>
-                <p>Clean architecture, modularised by layer.</p>
-                <a href="https://github.com/joegec/MovieDB-Android" target="_blank">View on GitHub</a>
+                <img src="moviedb-android.png" alt="Movie DB Android">
+                <div class="portfolio-item-content">
+                    <h3>Native Android Movie Database</h3>
+                    <p>Written in Jetpack Compose, using Retrofit, Room, Hilt, Stateflow, Coroutines, and MVVM.</p>
+                    <p>Extensive unit tests in JUnit and Mockito.</p>
+                    <p>Clean architecture, modularised by layer.</p>
+                    <a href="https://github.com/joegec/MovieDB-Android" target="_blank">View on GitHub</a>
+                </div>
             </div>
             <div class="portfolio-item">
-                <img src="pokemondb-flutter.png" alt="Pokedex Flutter" style="width: 30vw; min-width: 330px;">
-                <h3>Flutter Pokedex App</h3>
-                <p>Using Dio, SQLite, Bloc.</p>
-                <p>Clean architecture modularised by feature.</p>
-                <a href="https://github.com/joegec/PokemonDbFlutter" target="_blank">View on GitHub</a>
+                <img src="pokemondb-flutter.png" alt="Pokedex Flutter">
+                <div class="portfolio-item-content">
+                    <p>Using Dio, SQLite, L10n, GetIt and MVVM.</p>
+                    <p>Extensive unit tests in JUnit and Mockito.</p>
+                    <p>Clean architecture modularised by feature.</p>
+                    <a href="https://github.com/joegec/PokemonDbFlutter" target="_blank">View on GitHub</a>
+                </div>
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
