Updated flutter project description

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <div class="portfolio-item-content">
                         <h3>Cross-Platform Pokedex App Written With Flutter</h3>
                         <p>Using Dio, SQLite, L10n, GetIt and MVVM.</p>
-                        <p>Extensive unit tests in JUnit and Mockito.</p>
+                        <p>Extensive unit testing.</p>
                         <p>Clean architecture modularised by feature.</p>
                         <a href="https://github.com/joegec/PokemonDbFlutter" target="_blank">View on GitHub (Readme!)</a>
                     </div>
